[package]
name = "rusticwormhole"
version = "0.1.0"
authors = ["Esteban Küber <esteban@kuber.com.ar>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
async-std = { version = "1.6.5", features = ["attributes"] }
tide = "0.13.0"
serde = "*"
surf = "2.0.0"
async-tls = "0.8"