[package]
name = "rusticwormhole"
version = "0.3.0"
authors = ["Esteban Küber <esteban@kuber.com.ar>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tls = "0.8"
clap = { version = "3.2.21", features = ["derive"] }
futures-util = "0.3.24"
glob = "0.3"
http = "0.2.8"
hyper = { version = "0.14", features = ["full"] }
libc = "0.2"
rayon = "1.5.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["net", "io-std", "io-util", "macros", "rt-multi-thread"] }
warp = "0.3.2"